# gradle-dependency-viewer

./: .gitignore  Dockerfile  README.md  convert_to_graph.py  dependencies.json  dependencies.txt  dependencies.yaml  dependencies_firebase-auth-ktx.json  filter.py  graph_viewer.html  main.py  parse.py  pyproject.toml  requirements.txt  test_graph.json  test_utils.py  utils.py  viewer.html
.Jules/: palette.md
.gemini/commands/: up_version.toml
.github/workflows/: ci.yml  deploy.yml
app/: convert_to_graph.py  enlist.py  filter.py  main.py  parse.py  utils.py
app/static/: app.css  app.js
app/static/data/: dependencies.json
app/static/sample/: homeassistant_181149.json  signal-android_181249.json
app/templates/: index.html
app/viz/: graph_viewer.html  tree_viewer.html  viewer.html
scripts/: up_version.py
tests/: test_a11y.py  test_api.py  test_focus_management.py  test_history_ux.py  test_screenshot.py  test_utils.py
