[project]
name = "gradle-dependency-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "uvicorn==0.30.1",
    "pytest==8.2.2",
    "httpx==0.27.0",
]
