[project]
name = "gradle-dependency-viewer"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "uvicorn==0.30.1",
    "pytest==8.2.2",
    "httpx==0.27.0",
    "pyyaml==6.0.1",
]

[dependency-groups]
dev = [
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]
